--- a/ComposterProject2/composter-web/src/Footer.css
+++ b/ComposterProject2/composter-web/src/Footer.css
@@ -5,9 +5,9 @@
   text-align: center;
   padding: 20px;
   border-top: 5px solid #fff;
-  position: fixed;
-  bottom: 0;
   width: 100%;
+  position: relative;
+  bottom: 0;
 }
 
 .footer-content {
