--- a/ComposterProject2/composter-web/src/pages/PlantData.css
+++ b/ComposterProject2/composter-web/src/pages/PlantData.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 body {
+  padding-top: 100px; /* Adjusted value to ensure it accommodates the navigation bar */
   font-family: 'Roboto', sans-serif;
   margin: 0;
   box-sizing: border-box;
@@ -98,8 +99,9 @@ footer {
   .plant-container {
     padding: 40px;
   }
-  
-  .data-entry, .data-reset-import {
+
+  .data-entry,
+  .data-reset-import {
     padding: 40px;
   }
 }
